<resources>
    <string name="app_name">Android Utils Kotlin Java</string>
    <string name="action_settings">Settings</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="dialogs">Dialogs</string>
    <string name="customviews">Custom Views</string>
    <string name="animations">Animations</string>
    <string name="demoactivity">Demo Activity</string>

    <string name="dialogsdesc">Dialogs , AlertDialogs and BottomSheetDialogs</string>
    <string name="customviewsdesc">Custom Views</string>
    <string name="animationsdesc">Different Types of Animations</string>

    <string name="dialogjava">Dialog in Java</string>
    <string name="dialog1">Dialog1</string>
    <string name="dialog2">Dialog2</string>
    <string name="dialog3">Dialog3</string>
    <string name="dialog4">Dialog4</string>
    <string name="dialog5">Dialog5</string>
    <string name="dialog6">Dialog6</string>
    <string name="dialog7">Dialog7</string>
    <string name="dialog8">Dialog8</string>

    <string name="dialogjavadesc">Dialogs in Java Language</string>
    <string name="dialogdesc1">Exit Dialog using DialogFragment</string>
    <string name="dialogdesc2">Rating Dialog using DialogFragment</string>
    <string name="dialogdesc3">Settings Dialog in Activity without statusbar</string>
    <string name="dialogdesc4">Rating Dialog in activity</string>
    <string name="dialogdesc5">Dialog Using Library</string>
    <string name="dialogdesc6">Dilog6</string>
    <string name="dialogdesc7">Dilog7</string>
    <string name="dialogdesc8">Dilog8</string>

    <string name="dialogbottomsheet1">Bottom Sheet Dialog1</string>
    <string name="dialogbottomsheet2">Bottom Sheet Dialog2</string>
    <string name="dialogbottomsheet3">Bottom Sheet Dialog3</string>

    <string name="dialogalert1">Alert Dialog1</string>
    <string name="dialogalert2">Alert Dialog2</string>
    <string name="dialogalert3">Alert Dialog3</string>

    <string name="dialogalertdesc1">Alert Dialog Gravity Bottom hided statusbar</string>
    <string name="dialogalertdesc2">Alert Dialog</string>
    <string name="dialogalertdesc3">Alert Dialog</string>

    <string name="dialogbottomsheetdesc1">Menu using BottomsheetDialogFragment</string>
    <string name="dialogbottomsheetdesc2">Rating Dialog using BottomsheetDialogFragment</string>
    <string name="dialogbottomsheetdesc3">BottomsheetDialogFragment</string>
    <string name="dialogbottomsheetdesc4">BottomsheetDialogFragment</string>


    <string name="dialogjavadesc1">Exit Dialog using DialogFragment</string>
    <string name="dialogjavadesc2">Rating Dialog using DialogFragment</string>
    <string name="dialogjavadesc3">DialogFragment</string>
    <string name="dialogjavadesc4">DialogFragment</string>


    <string name="autoresizetext">This is auto resizeable textview.</string>
    <string name="autoresizetext2">This is auto resizeable textview.This is auto resizeable textview.</string>
    <string name="autoresizebtntext">This is Button inside auto fit layout.</string>


    <string name="animation1">Animations using YoYo</string>
    <string name="animation2">Animations Custom</string>
    <string name="clickanimate">Click Below Buttton to Animate</string>

    <string name="animate">Animate</string>
    <string name="animationfadein">Fadein</string>
    <string name="animationfadeout">Fadeout</string>

    <string name="exit">Exit?</string>
    <string name="exit_desc">Do you want to exit from App?</string>
    <string name="rateus_desc">We would be very grateful if you can rate us.</string>
    <string name="no_application_found">Application not found</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="play_store_share">https://play.google.com/store/apps/details?id=</string>
    <string name="share_this_app">Share this App</string>
    <string name="market_string">market://search?q=pub:abcapps</string>
    <string name="market_developer_string">http://play.google.com/store/apps/developer?id=abc apps</string>
    <string name="thisappneeds">This app needs %s access</string>
    <string name="followinstructions">Follow the instruction below:</string>


    <string name="instruction1">1. Tap Open Settings</string>
    <string name="instruction2">2. Goto Permissions</string>
    <string name="instruction3">3. Allow access to %s</string>
    <string name="abc">abc text</string>
    <string name="rhythm">rhythm</string>
    <string name="music">music</string>
    <string name="rate_first">Please give a rating first!</string>
    <string name="useGoogleLocationServices">Use Google\'s Location Services?</string>
    <string name="useGoogleLocationServicesPrompt">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</string>
    <string name="agree">agree</string>
    <string name="disagree">disagree</string>
    <string name="more_info">more_info</string>
    <string name="rate_us">Rate Us!</string>
    <string name="rate_us_description_text">Rate us description text</string>
    <string name="rate_now">Rate Now</string>
    <string name="are_you_sure_you_want_to_exit_this_app">Are you sure you want to exit this app?</string>
    <string name="exit_app">Exit App</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="submit">Submit</string>
    <string name="your_opinion_matter_to_us">Rate us!</string>
    <string name="rate_us_desc">rate us desc</string>
    <string name="cancel">Cancel</string>
    <string name="share_app">Share App</string>
    <string name="more_apps">More Apps</string>
    <string name="privacy_policy">Privacy Policy</string>

</resources>