<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:id="@+id/mymain"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/main_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/maindialogs"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/animationView"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/baseline_star_rate_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/your_opinion_matter_to_us"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginHorizontal="30dp"
                android:text="@string/rate_us_desc"
                android:textColor="@color/white" />

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/RatingBar"
                android:layout_marginTop="10dp"
                android:numStars="5"
                android:stepSize="0.5" />

            <TextView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/dialogbtn"
                android:text="@string/submit"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/cancelBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="15dp"
                android:text="@string/cancel"
                android:textColor="@color/white" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>