<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:elevation="0dp"
    app:cardElevation="0dp"
    app:cardCornerRadius="@dimen/_15sdp"
    app:cardBackgroundColor="#4527A0">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/exit_rateUs"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="10dp"

                    android:layout_marginEnd="15dp"
                    android:src="@drawable/admob_close_button_white_circle_black_cross" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_us"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_us_description_text"
                android:textColor="@color/white"
                android:alpha="0.8"
                android:layout_marginBottom="13dp"
                android:gravity="center"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rating_bar"
                android:numStars="5"
                android:theme="@style/RatingBar"
                android:stepSize="0.5" />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:text="@string/rate_now"
                android:minWidth="180dp"
                android:layout_margin="20dp"
                android:id="@+id/submit"
                android:textColor="@color/white"
                android:background="@drawable/btnblue"/>


        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>